[project]
name = "sra"
version = "0.1.0" 
description = "Minimal Python wrapper to interact with Some Random Api."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" }
keywords = ["wrapper", "api", "development"]
authors = [
  { name = "Yakiyo" }
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "requests"
]

[project.optional-dependencies] # Optional
dev = ["check-manifest"]
test = ["coverage"]

[project.urls]
"Homepage" = "https://github.com/Yakiyo/sra.py"
"Bug Reports" = "https://github.com/Yakiyo/sra.py/issues"
"Source" = "https://github.com/Yakiyo/sra.py/"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
